usbredirect: drop isoc packages if needed
We should handled scenarios that network can't handled device's bandwidth, see a88e197b and spice-gtk usage of that spice-gtk@36c7db9a
An user of this request is KubeVirt's virtctl, see this comment.
We should handled scenarios that network can't handled device's bandwidth, see a88e197b and spice-gtk usage of that spice-gtk@36c7db9a
An user of this request is KubeVirt's virtctl, see this comment.